--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: > # this means to ignore newlines until "baseurl:"
   This is my blog. I will post anything I consider interesting here. Hope you like! 😂
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: jekyllrb
+#url: "vancouver6t.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  Vancouver6T
 google_analytics: UA-89104783-1
 
