Got Google Analytics working

--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@
 title: Vancouver6T's blog
 email: vancouver6t@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
-  This is my blog. I will post anything I consider interesting here. Hope you like! 😂
+  This is my blog. I will post anything I consider interesting here. Hope you like! :joy: 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://vancouver6t.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #url: "vancouver6t.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  Vancouver6T
 google_analytics: UA-89104783-1
@@ -28,6 +28,7 @@ markdown: kramdown
 theme: minima
 gems:
   - jekyll-feed
+  - jemoji
 exclude:
   - Gemfile
   - Gemfile.lock
